modify start/stop script
Change-Id: I3ca6da35fe1c85524a6e8083ad92555a3863d957
Signed-off-by: zhangzhou-cn <zhang.zhou1@zte.com.cn>